--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
 
-    <title>Git Happy Merge</title>
+    <title>Git Happy Rebase</title>
     <link rel="stylesheet" href="style.css" />
     <link rel='icon' href='icon.png'>
     <script src="https://unpkg.com/vue@3"></script>
