--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel='icon' href='icon.png'>
     <script src="https://unpkg.com/vue@3"></script>
+    <meta name="description">Ma super description</meta>
   </head>
 
   <body>
